# syftbox-netflix-svd

./: README.md  env.example  main.py  pyproject.toml  run.sh
data/: imdb_ratings.npy
data/demo_profile/private/: dummy.csv
data/demo_profile/public/: datasets.yaml
syftbox_netflix/: __init__.py  app.py  main.py
syftbox_netflix/aggregator/: __init__.py  main.py
syftbox_netflix/aggregator/assets/: top5-series.html
syftbox_netflix/federated_analytics/: __init__.py  data_processing.py  dp_series.py
syftbox_netflix/federated_learning/: README.md  __init__.py  mlp_model.py  mock_svd.py  sequence_data.py  svd_dp.py  svd_participant_finetuning.py  svd_participant_local_recommendation.py  svd_server_aggregation.py  svd_server_initialisation.py
syftbox_netflix/fetcher/: __init__.py  netflix_fetcher.py
syftbox_netflix/loaders/: __init__.py  netflix_loader.py
syftbox_netflix/participant_utils/: __init__.py  checks.py  data_loading.py  home.html  syftbox.py
syftbox_netflix/server_utils/: __init__.py  data_loading.py
tests/: test_data_processing_enrichment.py  test_data_processing_reduction.py  test_data_processing_view_count_vectors.py  test_individual_viewing_aggregation.py  test_netflix_aggregator.py  test_netflix_aggregator_mlp.py  test_netflix_fetcher.py  test_netflix_history.py  test_netflix_loader.py  test_participant_finetuning.py  test_participant_loader_functions.py  test_participant_local_recommendations.py  test_server_loader_functions.py  test_server_svd_aggregation.py  test_server_svd_initialisations.py  test_svd_dp.py  test_utils_ml.py
(+12 files in other folders)
